Added tons of mappings and errors along with them.

--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -12,6 +12,15 @@
 		<spring.version>4.3.4.RELEASE</spring.version>
 	</properties>
 	<dependencies>
+
+		<!-- Linking with Backend -->
+		<dependency>
+			<groupId>com.gunjankharel</groupId>
+			<artifactId>shoppingbackend</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+
 		<!-- https://mvnrepository.com/artifact/javax/javaee-api -->
 		<dependency>
 			<groupId>javax</groupId>
@@ -19,7 +28,7 @@
 			<version>${javaee.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>jstl</groupId>
 			<artifactId>jstl</artifactId>
@@ -32,7 +41,7 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
 		<dependency>
 			<groupId>org.springframework</groupId>
